// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductItem /> @renders a free product as default 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  -webkit-transition: -webkit-transform 0.5s ease-in-out;
  -webkit-transition: transform 0.5s ease-in-out;
  transition: transform 0.5s ease-in-out;
}

.c0 {
  position: relative;
  display: inline-block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 5px solid;
  border-color: #00b6b8;
  overflow: hidden;
  width: 90%;
  max-width: 490px;
  color: #08070b;
}

.c0:hover .c1 {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c3 {
  position: relative;
  z-index: 1;
  padding: 20px;
  background-color: #F2F2F2;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.c4 {
  margin-top: 0;
}

.c5 {
  display: inline-block;
  right: 10px;
  padding: 5px 10px;
  border-radius: 5px;
  background-color: #00b6b8;
  font-weight: bold;
  font-size: 1.2rem;
}

<article
  class="c0"
  data-testid="Product-123"
>
  <img
    alt="Artist name"
    class="c1 c2"
    data-testid="Product-123-image"
    src="path/to/image1.jpg"
  />
  <div
    class="c3"
  >
    <h2
      class="c4"
      data-testid="Product-123-title"
    >
      Product title
    </h2>
    <div
      class="c5"
      data-testid="Product-123-price"
    >
      Free
    </div>
  </div>
</article>
`;

exports[`<ProductItem /> @renders a paid product with a price 1`] = `
.c0 {
  display: inline-block;
  right: 10px;
  padding: 5px 10px;
  border-radius: 5px;
  background-color: #00b6b8;
  font-weight: bold;
  font-size: 1.2rem;
}

<div
  class="c0"
  data-testid="Product-123-price"
>
  £
  9.99
</div>
`;

exports[`<ProductItem /> @renders a paid product without a price 1`] = `
.c0 {
  display: inline-block;
  right: 10px;
  padding: 5px 10px;
  border-radius: 5px;
  background-color: #00b6b8;
  font-weight: bold;
  font-size: 1.2rem;
}

<div
  class="c0"
  data-testid="Product-123-price"
>
  £
  12.99
</div>
`;

exports[`<ProductItem /> @renders without background color 1`] = `
.c0 {
  display: inline-block;
  right: 10px;
  padding: 5px 10px;
  border-radius: 5px;
  background-color: #00b6b8;
  font-weight: bold;
  font-size: 1.2rem;
}

<div
  class="c0"
  data-testid="Product-123-price"
>
  £
  9.99
</div>
`;
